fix(unity-bootstrap-theme): fix content img-txt overflow

--- a/packages/unity-bootstrap-theme/src/scss/extends/_image-text-block.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_image-text-block.scss
@@ -12,10 +12,6 @@
       flex-direction: row-reverse;
     }
 
-    @include media-breakpoint-up(xl) {
-      max-height: 540px;
-    }
-
     @media screen and (max-width: $uds-breakpoint-md) {
       flex-direction: column;
     }
